alt and met changed
alt and met changed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <meta name="twitter:card" content="summary">
     <meta property="twitter:title" content="Arctic Studio - Official Website">
-    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
     <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
