--- a/ourprojects/acnhvillagerwiki.html
+++ b/ourprojects/acnhvillagerwiki.html
@@ -56,7 +56,7 @@
         <div class="page" id="page">
             <div class="Project">
                 <p class="ProjectTitle">ACNH Villager Wiki</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128"/>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128" alt="ACNH Villager Wiki"/>
                 <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=734887424852885594&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
                 <a class="Vote" href="https://top.gg/bot/734887424852885594/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">Get information about your favourite villagers in Animal Crossing.</p>
@@ -97,7 +97,7 @@
                         <th>Stop the bot from sending the notifications</th>
                     </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/ACNH_Villager_Wiki.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/ACNH_Villager_Wiki.png" alt="Preview"/>
             </div>
 
             <div class="footer">
