--- a/ourprojects/rocketlaunchtracker.html
+++ b/ourprojects/rocketlaunchtracker.html
@@ -56,7 +56,7 @@
         <div class="page" id="page">
             <div class="Project">
                 <p class="ProjectTitle">Rocket Launch Tracker</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128"/>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128" alt="Rocket Launch Tracker" />
                 <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=697386812078817300&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
                 <a class="Vote" href="https://top.gg/bot/697386812078817300/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will notify the users in your server when a new rocket launch is announced.</p>
@@ -92,7 +92,7 @@
                         <th>Stop the bot from sending messages</th>
                     </tr>
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Rocket_Launch_Tracker.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Rocket_Launch_Tracker.png" alt="Preview" />
             </div>
 
             <div class="footer">
