--- a/ourprojects/superherowiki.html
+++ b/ourprojects/superherowiki.html
@@ -56,7 +56,7 @@
         <div class="page" id="page">
             <div class="Project">
                 <p class="ProjectTitle">Superhero Wiki</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128"/>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128" alt="Superhero Wiki" />
                 <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=698627966212505721&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
                 <a class="Vote" href="https://top.gg/bot/698627966212505721/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will give you some information about your favorite comic superheroes.</p>
@@ -78,7 +78,7 @@
                     </tr>
 
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Superhero_Wiki.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Superhero_Wiki.png" alt="Preview" />
             </div>
 
             <div class="footer">
