--- a/ourprojects/valorantwiki.html
+++ b/ourprojects/valorantwiki.html
@@ -56,7 +56,7 @@
         <div class="page" id="page">
             <div class="Project">
                 <p class="ProjectTitle">Valorant Wiki</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128"/>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128" alt="Valorant Wiki" />
                 <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=699922624792231936&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
                 <a class="Vote" href="https://top.gg/bot/699922624792231936/vote " target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">The Valorant Wiki can give you information about your favourite agents, weapons, maps and much more.</p>
@@ -108,7 +108,7 @@
                     </tr>
 
                 </table>
-                <img class="ProjectPreviewImage" src="../storage/project_images/Valorant_Wiki.png" />
+                <img class="ProjectPreviewImage" src="../storage/project_images/Valorant_Wiki.png" alt="Preview" />
             </div>
 
             <div class="footer">
