--- a/ourprojects/weeklyartjams.html
+++ b/ourprojects/weeklyartjams.html
@@ -56,7 +56,7 @@
         <div class="page" id="page">
             <div class="Project">
                 <p class="ProjectTitle">Weekly Art Jams</p>
-                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128"/>
+                <img class="ProjectImage" src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128" alt="Weekly Art Jams" />
                 <a class="Invite" href="https://discord.com/oauth2/authorize?client_id=685912884437581833&permissions=8&scope=bot" target="_blank"><button>Invite</button></a>
                 <a class="Vote" href="https://top.gg/bot/685912884437581833/vote" target="_blank"><button>Vote</button></a>
                 <p class="ProjectDescription">This bot will send a random theme every Monday at 12:00 CEST.</p>
