--- a/support.html
+++ b/support.html
@@ -30,7 +30,7 @@
 
     <meta name="twitter:card" content="summary">
     <meta property="twitter:title" content="Arctic Studio - Support">
-    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
     <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
@@ -69,19 +69,19 @@
                         <div class="GRID3">
                             <div class="CARD">
                                 <p class="CARD-TITLE">Ko-Fi</p>
-                                <img src="./storage/kofi.png">
+                                <img src="./storage/kofi.png" alt="Ko-Fi" >
                                 <p class="DESC">Support us on ko-fi.</p>
                                 <a href="https://ko-fi.com/arctic_studio"  target="_blank"><p>MORE INFO</p></a>
                             </div>
                             <div class="CARD">
                                 <p class="CARD-TITLE">Patreon</p>
-                                <img src="./storage/Patreon.jpg">
+                                <img src="./storage/Patreon.jpg" alt="Patreon" >
                                 <p class="DESC">Support us on Patreon.</p>
                                 <a href="https://www.patreon.com/arcticstudio" target="_blank"><p>MORE INFO</p></a>
                             </div>
                             <div class="CARD">
                                 <p class="CARD-TITLE">PayPal</p>
-                                <img src="./storage/PayPal.png">
+                                <img src="./storage/PayPal.png" alt="PayPal" >
                                 <p class="DESC">Support us via Paypal</p>
                                 <a href="https://www.paypal.com/paypalme/ArcticStudioPayPal"  target="_blank"><p>MORE INFO</p></a>
                             </div>
