--- a/projects.html
+++ b/projects.html
@@ -21,16 +21,16 @@
     <meta name="msapplication-config" content="./favicon_data/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <meta property="og:title" content="Arctic Studio - Projects">
+    <meta property="og:title" content="Arctic Studio - Our Projects">
     <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
     <meta property="og:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
     <meta property="og:type" content="business.business">
-    <meta property="og:site_name" content="Arctic Studio - Projects">
+    <meta property="og:site_name" content="Arctic Studio - Our Projects">
     <meta property="og:url" content="https://arcticstudio.info/ourprojects.html">
 
     <meta name="twitter:card" content="summary">
-    <meta property="twitter:title" content="Arctic Studio - Projects">
-    <meta property="twitter:description" content="Arctic Studio is a small development studio that works on cool projects.">
+    <meta property="twitter:title" content="Arctic Studio - Our Projects">
+    <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
     <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
@@ -61,7 +61,7 @@
                 <div class="GRID">
                     <div class="CARD">
                         <p class="CARD-TITLE">Items Planet</p>
-                        <img src="https://itemsplanet.com/Storage/logo.png">
+                        <img src="https://itemsplanet.com/Storage/logo.png" alt="itemsplanet" >
                         <p class="DESC">Get random cool products that you can buy on Amazon.</p>
                         <a target="_blank" href="https://www.itemsplanet.com"><p>MORE INFO</p></a>
                     </div>
@@ -71,50 +71,50 @@
                 <div class="GRID2">
                     <div class="CARD">
                         <p class="CARD-TITLE">Free Games Bot</p>
-                        <img src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/698117737175580692/fa6bd8376bcd544b2a577d5c4074530a.png?size=128" alt="Free Games Bot" >
                         <p class="DESC">This bot will send a message in your server when a new game is free.</p>
                         <a href="./ourprojects/freegames.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Hermes</p>
-                        <img src="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/697812974563360768/0ea561a7f9c63b1d531453c8e248f549.png?size=128" alt="Hermes" >
                         <p class="DESC">This bot will send a random event that happened on the same day in another year.</p>
                         <a href="./ourprojects/hermes.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Quote of the day</p>
-                        <img src="https://cdn.discordapp.com/avatars/728687533076250674/8573b1a4b62ac33abd18333910855712.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/728687533076250674/8573b1a4b62ac33abd18333910855712.png?size=128" alt="Quote of the day" >
                         <p class="DESC">The Quotes Bot will send a random quote in your discord server every day.</p>
                         <a href="./ourprojects/quoteoftheday.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">ACNH Villager Wiki</p>
-                        <img src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/734887424852885594/462ba64838daac9b39911fcd6b77a18f.png?size=128" alt="ACNH Villager Wiki" >
                         <p class="DESC">Get detailed information about your favourite characters from ACNH.</p>
                         <a href="./ourprojects/acnhvillagerwiki.html"><p>MORE INFO</p></a>
                     </div>
 
                     <div class="CARD">
                         <p class="CARD-TITLE">Superhero Wiki</p>
-                        <img src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/698627966212505721/80811c8c523d7c239d1d93f4afc73bbc.png?size=128" alt="Superhero Wiki" >
                         <p class="DESC">With this bot you can get information about your favorite comic superheroes.</p>
                         <a href="./ourprojects/superherowiki.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Valorant Wiki</p>
-                        <img src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/699922624792231936/b44a08fd477e7ea7407bd1b83c376978.png?size=128" alt="Valorant Wiki" >
                         <p class="DESC">Get detailed information about the items, maps and characters from Valorant.</p>
                         <a href="./ourprojects/valorantwiki.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Weekly Art Jams</p>
-                        <img src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/685912884437581833/431ed5628f0e51b43654007b3d1f3d2e.png?size=128" alt="Weekly Art Jams" >
                         <p class="DESC">The Weekly Art Jams bot will send a random theme ever Monday at 12:00 CEST.</p>
                         <a href="./ourprojects/weeklyartjams.html"><p>MORE INFO</p></a>
                     </div>
                     <div class="CARD">
                         <p class="CARD-TITLE">Rocket Launch Tracker</p>
-                        <img src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128">
+                        <img src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128" alt="Rocket Launch Tracker" >
                         <p class="DESC">Get live updates about the latest rocket lauches.</p>
                         <a href="./ourprojects/rocketlaunchtracker.html"><p>MORE INFO</p></a>
                     </div>
