--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
     <div class="content" id="content">
         <div class="header noSelect">
             <div class="header-content">
-                <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
+                <a rel="noreferrer" href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
                     <h1 class="logoName">Arctic Studio</h1>
                 </a>
                 <div class="nav">
-                    <a href="/contact.html">CONTACT</a>
-                    <a href="/support.html">SUPPORT US</a>
-                    <a href="/merch.html">MERCH</a>
-                    <a href="/projects.html">OUR PROJECTS</a>
+                    <a rel="noreferrer" href="/contact.html">CONTACT</a>
+                    <a rel="noreferrer" href="/support.html">SUPPORT US</a>
+                    <a rel="noreferrer" href="/merch.html">MERCH</a>
+                    <a rel="noreferrer" href="/projects.html">OUR PROJECTS</a>
                 </div>
             </div>
         </div>
@@ -59,11 +59,11 @@
                 <div class="heroObj">
                     <p class="Title">We are Arctic Studio</p>
                     <p class="Under">We are a developement studio</p>
-                    <a href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
+                    <a rel="noreferrer" href="#about"><button class="MoreButton">MORE ABOUT US</button></a>
 
                     <div class="icons noSelect">
-                        <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
-                        <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>
+                        <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
+                        <a rel="noreferrer" href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>
                     </div>
                 </div>
             </div>
@@ -79,20 +79,20 @@
                     <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
                     <p>Arctic Studio was originally a game development studio. We now also work on other projects such
                         as websites, discord bots and more.</p>
-                    <p>Check out our published projects <a href="/projects.html">here</a>.</p>
+                    <p>Check out our published projects <a rel="noreferrer"href="/projects.html">here</a>.</p>
                     <p>Our services and bots are being used by more than 1.5 million users and is growing every day!</p>
                 </div>
             </div>
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
-                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
+                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a rel="noreferrer" href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
-                <p><b>Discord</b> : <a href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
-                <p>Made by <a href="https://www.siddhart.dev">Siddhart</a></p>
+                <p><b>Discord</b> : <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
+                <p>Made by <a rel="noreferrer" href="https://www.siddhart.dev">Siddhart</a></p>
                 <p>&copy; Arctic Studio 2020</p>
             </div>
         </div>
