--- a/contact.html
+++ b/contact.html
@@ -59,11 +59,11 @@
             <div class="about">
                 <p class="AboutUsTitle">Contact Us</p>
                 <div class="AboutUsParagraph">
-                    <p>If you have any quesitons for us or about our projects you can contact us via email or you can join our Discord server.</p>
+                    <p>If you have any questions for us or about our projects you can contact us via email or you can join our Discord server.</p>
                     <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
                     <p>Discord Server : <a href="https://discordapp.com/invite/wzF9qfC">join here</a></p>
                     <br>
-                    <p>If you have any business releated quesitons you can only contact us by sending an email.</p>
+                    <p>If you have any business releated questions you can only contact us by sending an email.</p>
                     <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
                     
                 </div>
