--- a/index.html
+++ b/index.html
@@ -104,3 +104,14 @@
 <script src="./scripts/index.js"></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <script src="./scripts/counter.min.js"></script>
+<script src="./scripts/consoleArt.js"></script>
+
+<script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    
+    ga('create', 'UA-136474655-2', 'auto');
+    ga('send', 'pageview', 'arcticstudiohomepage');
+</script>
