--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
 <script src="./scripts/counter.min.js"></script>
 <script src="./scripts/consoleArt.js"></script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
