--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
                     <h1 class="logoName">Arctic Studio</h1>
                 </a>
                 <div class="nav">
-                    <a rel="noreferrer" href="/contact.html">CONTACT</a>
-                    <a rel="noreferrer" href="/support.html">SUPPORT US</a>
-                    <a rel="noreferrer" href="/merch.html">MERCH</a>
-                    <a rel="noreferrer" href="/projects.html">OUR PROJECTS</a>
+                    <a rel="noreferrer" href="/contact">CONTACT</a>
+                    <a rel="noreferrer" href="/support">SUPPORT US</a>
+                    <a rel="noreferrer" href="/merch">MERCH</a>
+                    <a rel="noreferrer" href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
         </div>
@@ -79,7 +79,7 @@
                     <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
                     <p>Arctic Studio was originally a game development studio. We now also work on other projects such
                         as websites, discord bots and more.</p>
-                    <p>Check out our published projects <a rel="noreferrer"href="/projects.html">here</a>.</p>
+                    <p>Check out our published projects <a rel="noreferrer" href="/projects">here</a>.</p>
                     <p>Our services and bots are being used by more than 2 million users and is growing every day!</p>
                 </div>
             </div>
