--- a/merch.html
+++ b/merch.html
@@ -44,10 +44,10 @@
                 <a href="/" class="LogoA"><img class="logo" src="./storage/Logo.png" alt="logo" />
                 <h1 class="logoName">Arctic Studio</h1></a>
                 <div class="nav">
-                    <a href="/contact.html">CONTACT</a>
-                    <a href="/support.html">SUPPORT US</a>
-                    <a href="/merch.html">MERCH</a>
-                    <a href="/projects.html">OUR PROJECTS</a>
+                    <a href="/contact">CONTACT</a>
+                    <a href="/support">SUPPORT US</a>
+                    <a href="/merch">MERCH</a>
+                    <a href="/projects">OUR PROJECTS</a>
                 </div>
             </div>
         </div>
