--- a/contact.html
+++ b/contact.html
@@ -56,16 +56,24 @@
         </div>
 
         <div class="page" id="page">
-            <div class="about">
-                <p class="AboutUsTitle">Contact Us</p>
-                <div class="AboutUsParagraph">
-                    <p>If you have any questions for us or about our projects you can contact us via email or you can join our Discord server.</p>
-                    <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
-                    <p>Discord Server : <a href="https://discordapp.com/invite/wzF9qfC">join here</a></p>
-                    <br>
-                    <p>If you have any business releated questions you can only contact us by sending an email.</p>
-                    <p>Email : <a href="mailto:info.arcticstudio@gmail.com">info.arcticstudio@gmail.com</a></p>
-                    
+            <div class="Contact">
+                <p class="ContacTitle">Contact Us</p>
+                <div class="ContactPar">
+                    <p>For any non business related questions or concerns you can contact us in our <a href="" target="_blank">discord server</a></p>
+                    <p>If you have any business related questions or concers please fill out the form below.</p>
+                </div>
+
+                <div class="Form">
+                    <div class="Inputsfields">
+                        <p class="inptitle">name</p>
+                        <input class="name" id="name"/>
+                        <br>
+                        <p class="inptitle">message</p>
+                        <textarea class="message" id="message"></textarea>
+                        <a class="submit" onclick="changeMailTo()" id="SUBMIT" >
+                            <button>SUBMIT</button>
+                        </a>
+                    </div>
                 </div>
             </div>
 
@@ -84,6 +92,13 @@
 </body>
 </html>
 
+<script>
+    function changeMailTo(){
+        const Subject = `Email from ${document.getElementById('name').value}`
+        const Body = document.getElementById('message').value
+        document.getElementById('SUBMIT').href = `mailto:info.arcticstudio@gmail.com?subject=${Subject}&body=${Body}`
+    }
+</script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
