--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arctic Studio - Contact</title>
 
-    <link rel="stylesheet" type="text/css" href="./style/contact.css">
     <link rel="stylesheet" type="text/css" href="./style/index.css">
+    <link rel="stylesheet" type="text/css" href="./style/contact.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_data/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_data/favicon-32x32.png">
@@ -60,7 +60,7 @@
                 <p class="ContacTitle">Contact Us</p>
                 <div class="ContactPar">
                     <p>For any non business related questions or concerns you can contact us in our <a href="" target="_blank">discord server</a></p>
-                    <p>If you have any business related questions or concers please fill out the form below.</p>
+                    <p>If you have any business related questions or concerns please fill out the form below.</p>
                 </div>
 
                 <div class="Form">
