--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <title>Arctic Studio - Contact</title>
 
     <link rel="stylesheet" type="text/css" href="./style/index.css">
-    <link rel="stylesheet" type="text/css" href="./style/contact.css">
+    <link rel="stylesheet" type="text/css" href="/style/contact.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="./favicon_data/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon_data/favicon-32x32.png">
