--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,8 @@
 
     <meta property="og:title" content="Arctic Studio Contact - Development Studio">
     <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
     <meta property="og:type" content="business.business">
     <meta property="og:site_name" content="Arctic Studio - Official Website">
     <meta property="og:url" content="https://arcticstudio.info/contact.html">
@@ -31,13 +32,101 @@
     <meta name="twitter:card" content="summary">
     <meta property="twitter:title" content="Arctic Studio Contact - Official Website">
     <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
-    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta name="twitter:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
-    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio">
+    <meta name="keywords"
+        content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio">
     <meta name="author" content="Arctic Studio - Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
+<style>
+    .ContacTitle {
+        text-align: center;
+        font-size: 55px;
+        font-weight: bold;
+    }
+
+    .ContactPar {
+        width: 100%;
+        text-align: center;
+    }
+
+    .Form {
+        display: block;
+        width: 360px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 35px;
+    }
+
+    .Inputsfields {
+        text-align: center;
+    }
+
+    .Inputsfields input {
+        width: 90%;
+        padding: 5px;
+        border: 2px solid white;
+        border-radius: 25px;
+        background-color: rgba(255, 255, 255, 0.185);
+    }
+
+    .Inputsfields textarea {
+        width: 90%;
+        padding: 5px;
+        border: 2px solid white;
+        border-radius: 25px;
+        background-color: rgba(255, 255, 255, 0.185);
+    }
+
+    .Inputsfields input:focus {
+        outline: none;
+    }
+
+    .inptitle {
+        margin-bottom: 5px;
+    }
+
+    .name {
+        height: 30px;
+    }
+
+    textarea {
+        height: 100px;
+        font-size: 16px;
+    }
+
+    textarea:focus {
+        outline: none;
+    }
+
+    .submit {
+        width: fit-content;
+        padding: 5px;
+        border: 2px solid white;
+        border-radius: 25px;
+        background-color: rgba(255, 255, 255, 0.185);
+        color: white;
+    }
+
+    .submit button {
+        margin-top: 20px;
+        width: fit-content;
+        border: none;
+        background-color: transparent;
+        color: white;
+    }
+
+    .submit button:focus {
+        outline: none;
+    }
+
+    .submit button:hover {
+        cursor: pointer;
+    }
+</style>
 
 <body>
     <div class="content" id="content">
@@ -59,18 +148,19 @@
             <div class="Contact">
                 <p class="ContacTitle">Contact Us</p>
                 <div class="ContactPar">
-                    <p>For any non business related questions or concerns you can contact us in our <a href="" target="_blank">discord server</a></p>
+                    <p>For any non business related questions or concerns you can contact us in our <a href=""
+                            target="_blank">discord server</a></p>
                     <p>If you have any business related questions or concerns please fill out the form below.</p>
                 </div>
 
                 <div class="Form">
                     <div class="Inputsfields">
                         <p class="inptitle">name</p>
-                        <input class="name" id="name"/>
+                        <input class="name" id="name" />
                         <br>
                         <p class="inptitle">message</p>
                         <textarea class="message" id="message"></textarea>
-                        <a class="submit" onclick="changeMailTo()" id="SUBMIT" >
+                        <a class="submit" onclick="changeMailTo()" id="SUBMIT">
                             <button>SUBMIT</button>
                         </a>
                     </div>
@@ -79,8 +169,10 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
-                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
+                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert"
+                            src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png"
+                            alt="Tumblr" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
@@ -90,10 +182,11 @@
             </div>
         </div>
 </body>
+
 </html>
 
 <script>
-    function changeMailTo(){
+    function changeMailTo() {
         const Subject = `Email from ${document.getElementById('name').value}`
         const Body = document.getElementById('message').value
         document.getElementById('SUBMIT').href = `mailto:info.arcticstudio@gmail.com?subject=${Subject}&body=${Body}`
@@ -101,11 +194,13 @@
 </script>
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
     ga('create', 'UA-136474655-2', 'auto');
     ga('send', 'pageview', 'contact');
 </script>
