--- a/contact.html
+++ b/contact.html
@@ -148,13 +148,14 @@
             <div class="Contact">
                 <p class="ContacTitle">Contact Us</p>
                 <div class="ContactPar">
-                    <p>For any non business related questions or concerns you can contact us in our <a href=""
+                    <p>For any non business related questions or concerns you can contact us in our <a href="https://discord.com/invite/wzF9qfC"
                             target="_blank">discord server</a></p>
                     <p>If you have any business related questions or concerns please fill out the form below.</p>
                 </div>
 
                 <div class="Form">
-                    <div class="Inputsfields">
+                    <form class="Inputsfields">
+                        <input type="hidden" name="form-name" value="contact" />
                         <p class="inptitle">name</p>
                         <input class="name" id="name" />
                         <br>
@@ -163,7 +164,7 @@
                         <a class="submit" onclick="changeMailTo()" id="SUBMIT">
                             <button>SUBMIT</button>
                         </a>
-                    </div>
+                    </form>
                 </div>
             </div>
 
