changed small things
changed small things

--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@
                 <p class="ContacTitle">Contact Us</p>
                 <div class="ContactPar">
                     <p>For any non business related questions or concerns you can contact us in our <a href="https://discord.com/invite/wzF9qfC"
-                            target="_blank">discord server</a></p>
+                            target="_blank">discord server</a>.</p>
                     <p>If you have any business related questions or concerns please fill out the form below.</p>
                 </div>
 
