--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
             <div class="about">
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
-                    <p>Hey, Welcome to our official website</p>
-                    <p>Arctic Studio was created in 2018 by two friends that met each other through a game jam.</p>
-                    <p>Arctic Studio was originally a game development studio. We now also work on other projects such
-                        as websites, discord bots and more.</p>
+                    <p>Hey, Welcome to our official website!</p>
+                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic Studio was first used to publish games under.</p>
+                    <p>We later also started working on other projects like Discord Bots and Websites.</p>
+                    <p>While making Discord Bots we have created an community with all amazing people and its growing every day!</p>
                     <p>Check out our published projects <a rel="noreferrer" href="/projects">here</a>.</p>
-                    <p>Our services and bots are being used by more than 2 million users and is growing every day!</p>
+                    <p>And if you want to join our amazing community click <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">here</a>.</p>
                 </div>
             </div>
 
