--- a/merch.html
+++ b/merch.html
@@ -56,7 +56,7 @@
             <div class="hero">
                 <div class="heroObj">
                     <p class="ICON">🛠</p>
-                    <p class="TITLE">This page is still under construction</p>
+                    <p class="TITLE">This page is still under construction!</p>
                     <p class="Under">Please check again later or wait for the announcement in our <a href="https://discordapp.com/invite/wzF9qfC" target="_blank">Discord server</a></p>
                 </div>
             </div>
