--- a/projects.html
+++ b/projects.html
@@ -115,7 +115,7 @@
                     <div class="CARD">
                         <p class="CARD-TITLE">Rocket Launch Tracker</p>
                         <img src="https://cdn.discordapp.com/avatars/697386812078817300/792962afe0808f939770af398d805aaf.png?size=128" alt="Rocket Launch Tracker" >
-                        <p class="DESC">Get live updates about the latest rocket lauches.</p>
+                        <p class="DESC">Track the latest planned rocket launches in your discord server.</p>
                         <a rel="noreferrer"  href="https://www.arcticstudio.info/ourprojects/rocketlaunchtracker"><p>MORE INFO</p></a>
                     </div>
                 </div>
