--- a/ourprojects/freegames.html
+++ b/ourprojects/freegames.html
@@ -78,7 +78,7 @@
                     </tr>
 
                     <tr class="TableObject">
-                        <th>FG setup</th>
+                        <th>FG stop</th>
                         <th>Stop the bot from sending notifications</th>
                     </tr>
 
