--- a/contact.html
+++ b/contact.html
@@ -156,10 +156,10 @@
                 <div class="Form">
                     <form class="Inputsfields">
                         <input type="hidden" name="form-name" value="contact" />
-                        <p class="inptitle">name</p>
+                        <p class="inptitle">Name</p>
                         <input class="name" id="name" />
                         <br>
-                        <p class="inptitle">message</p>
+                        <p class="inptitle">Message</p>
                         <textarea class="message" id="message"></textarea>
                         <a class="submit" onclick="changeMailTo()" id="SUBMIT">
                             <button>SUBMIT</button>
