--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <p class="AboutUsTitle">About Us</p>
                 <div class="AboutUsParagraph">
                     <p>Hey, Welcome to our official website!</p>
-                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic Studio was first used to publish games under.</p>
+                    <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic Studio was first used to publish games.</p>
                     <p>We later also started working on other projects like Discord Bots and Websites.</p>
                     <p>While making Discord Bots we have created an community with all amazing people and its growing every day!</p>
                     <p>Check out our published projects <a rel="noreferrer" href="/projects">here</a>.</p>
