--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <p>We later also started working on other projects like Discord Bots and Websites.</p>
                     <p>While making Discord Bots we have created an community with all amazing people and its growing every day!</p>
                     <p>Check out our published projects <a rel="noreferrer" href="/projects">here</a>.</p>
-                    <p>And if you want to join our amazing community click <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">here</a>.</p>
+                    <p>If you want to join our amazing community click <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">here</a>.</p>
                 </div>
             </div>
 
