--- a/support.html
+++ b/support.html
@@ -60,7 +60,7 @@
                 <p class="AboutUsTitle">Support Us</p>
                 <div class="AboutUsParagraph">
                     <p>Almost all of the projects we have worked on or are still working on are for non-profit. If you
-                        like our projects and wish to support us you can, by supporting us on Ko-fi, Patreon or PayPal.
+                        like our projects and wish to support us you can, by supporting us on Ko-Fi, Patreon or PayPal.
                     </p>
                     <p>All the donated money will be used to pay for the servers our bots / api's run on. The donations
                         will also be used to pay for our upcomming projects and upgrades.</p>
