removde style from contact page
removde style from contact page

--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arcitc Studio - Page Not Found</title>
+    <title>Arctic Studio - Page Not Found</title>
 
     <link rel="stylesheet" type="text/css" href="./style/404.css">
     <link rel="stylesheet" type="text/css" href="./style/index.css">
