--- a/support.html
+++ b/support.html
@@ -23,7 +23,8 @@
 
     <meta property="og:title" content="Arctic Studio - Support">
     <meta property="og:description" content="Arctic Studio is a small development studio that works on cool projects.">
-    <meta property="og:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta property="og:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
     <meta property="og:type" content="business.business">
     <meta property="og:site_name" content="Arctic Studio - Support">
     <meta property="og:url" content="https://arcticstudio.info/support.html">
@@ -31,10 +32,12 @@
     <meta name="twitter:card" content="summary">
     <meta property="twitter:title" content="Arctic Studio - Support">
     <meta property="twitter:description" content="Arctic Studio is a development studio that works on cool projects.">
-    <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
+    <meta name="twitter:image"
+        content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
-    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, arctic studio support">
+    <meta name="keywords"
+        content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, arctic studio support">
     <meta name="author" content="Arctic Studio Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
@@ -69,22 +72,31 @@
                         <div class="GRID3">
                             <div class="CARD">
                                 <p class="CARD-TITLE">Ko-Fi</p>
-                                <img src="./storage/kofi.png" alt="Ko-Fi" >
+                                <img src="./storage/kofi.png" alt="Ko-Fi">
                                 <p class="DESC">Support us on ko-fi.</p>
-                                <a href="https://ko-fi.com/arctic_studio"  target="_blank"><p>MORE INFO</p></a>
+                                <a href="https://ko-fi.com/arctic_studio" target="_blank">
+                                    <p>MORE INFO</p>
+                                </a>
                             </div>
                             <div class="CARD">
                                 <p class="CARD-TITLE">Patreon</p>
-                                <img src="./storage/Patreon.jpg" alt="Patreon" >
+                                <img src="./storage/Patreon.jpg" alt="Patreon">
                                 <p class="DESC">Support us on Patreon.</p>
-                                <a href="https://www.patreon.com/arcticstudio" target="_blank"><p>MORE INFO</p></a>
+                                <a href="https://www.patreon.com/arcticstudio" target="_blank">
+                                    <p>MORE INFO</p>
+                                </a>
                             </div>
                             <div class="CARD">
                                 <p class="CARD-TITLE">PayPal</p>
-                                <img src="./storage/PayPal.png" alt="PayPal" >
-                                <p class="DESC">Support us via Paypal</p>
-                                <a href="https://www.paypal.com/paypalme/ArcticStudioPayPal"  target="_blank"><p>MORE INFO</p></a>
+                                <img src="./storage/PayPal.png" alt="PayPal">
+                                <p class="DESC">Support us via Paypal.</p>
+                                <a href="https://www.paypal.com/paypalme/ArcticStudioPayPal" target="_blank">
+                                    <p>MORE INFO</p>
+                                </a>
                             </div>
+                        </div>
+
+                        <div class="BraveGrid" id="BraveGridDIV">
                         </div>
                     </div>
                 </div>
@@ -92,8 +104,10 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
-                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png" alt="Tumblr" /></a>
+                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert"
+                            src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="./storage/Tumblr.png"
+                            alt="Tumblr" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
@@ -110,11 +124,32 @@
 
 <script async src='https://www.google-analytics.com/analytics.js'></script>
 <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+
     ga('create', 'UA-136474655-2', 'auto');
     ga('send', 'pageview', 'support');
+</script>
+
+<script>
+    var request = new XMLHttpRequest()
+    request.open('GET', 'https://api.duckduckgo.com/?q=useragent&format=json', true)
+    request.onload = function () {
+        var data = JSON.parse(this.response)
+        var isBrave = data['Answer'].includes('Brave');
+        if (isBrave) {
+            document.getElementById('BraveGridDIV').innerHTML = `
+            <div class="CARD">
+                <p class="CARD-TITLE">Brave Rewards</p>
+                <img src="./storage/BAT.png" alt="Brave">
+                <p class="DESC">You can support us via Brave by donating us BAT. You can find this option by click on the BAT icon.</p>
+            </div>
+            `
+        }
+    }
+    request.send()
 </script>
