--- a/support.html
+++ b/support.html
@@ -146,7 +146,7 @@
             <div class="CARD">
                 <p class="CARD-TITLE">Brave Rewards</p>
                 <img src="./storage/BAT.png" alt="Brave">
-                <p class="DESC">You can support us via Brave by donating us BAT. You can find this option by click on the BAT icon.</p>
+                <p class="DESC">You can support us via Brave by donating us BAT. You can find this option by clicking on the BAT icon.</p>
             </div>
             `
         }
