--- a/reddit.html
+++ b/reddit.html
@@ -35,7 +35,9 @@
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
 <body>
-    
+    <noscript>
+        <p>Please enable javascript or visit the page <a href="https://www.reddit.com/r/ArcticStudio"></a>https://www.reddit.com/r/ArcticStudio</p>
+    </noscript>
 </body>
 </html>
 
