some little changes
added background credits. Replaced tumblr icon with reddit and replace credits for siddhart.dev

--- a/ourprojects/hermes.html
+++ b/ourprojects/hermes.html
@@ -92,13 +92,14 @@
 
             <div class="footer">
                 <div class="footerIcons noSelect">
-                    <a href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="../storage/Discord.jpg" alt="Discord" /></a>
-                    <a href="https://arctic-studio.tumblr.com/" target="_blank"><img src="../storage/Tumblr.png" alt="Tumblr" /></a>
+                    <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC" target="_blank"><img class="invert" src="./storage/Discord.jpg" alt="Discord" /></a>
+                    <a rel="noreferrer" href="https://www.reddit.com/r/ArcticStudio/" target="_blank"><img class="invert" src="../storage/reddit.png" alt="Reddit" /></a>
                 </div>
                 <p><b>Contact:</b></p>
                 <p><b>Email</b> : info.arcticstudio[at]gmail.com (response 1-4 days)</p>
-                <p><b>Discord</b> : <a href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
-                <p>Made by <a href="https://www.siddhart.dev">Siddhart</a></p>
+                <p><b>Discord</b> : <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">join here</a> (response 1 day)</p>
+                <p>Background by <a rel="noreferrer" href="https://unsplash.com/@anniespratt">anniespratt</a></p>
+                <p>Website by <a rel="noreferrer" href="https://www.siddhart.dev">Siddhart</a></p>
                 <p>&copy; Arctic Studio 2020</p>
             </div>
         </div>
