--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </html>
 
 <script src="./scripts/index.js"></script>
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js'></script>
+<script src='https://code.jquery.com/jquery-3.5.1.min.js'></script>
 <script src="./scripts/counter.min.js"></script>
 <script src="./scripts/consoleArt.js"></script>
 
