--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     <p>Arctic Studio is development studio that was created in 2018 by two friends. The name Arctic Studio was first used to publish games.</p>
                     <p>We later also started working on other projects like Discord Bots and Websites.</p>
                     <p>While making Discord Bots we have created an community with all amazing people and its growing every day!</p>
-                    <p>Check out our published projects <a rel="noreferrer" href="/projects">here</a>.</p>
-                    <p>If you want to join our amazing community click <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">here</a>.</p>
+                    <p>Check out our  <a rel="noreferrer" href="/projects">published projects</a>.</p>
+                    <p>Join our <a rel="noreferrer" href="https://discordapp.com/invite/wzF9qfC">amazing community</a>.</p>
                 </div>
             </div>
 
