--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="twitter:image" content="https://cdn.discordapp.com/attachments/759078535485849612/789929500166324255/SINGLE_LOGO.png">
 
     <meta charset="UTF-8">
-    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio">
+    <meta name="keywords" content="arctic studio, arcticstudio, discord bots, discordbot, Arctic, Studio,Free games bot,arctic,studio, artic studio, arctics studio, articstudio,arctic development">
     <meta name="author" content="Arctic Studio - Development Studio">
     <meta name="description" content="Arctic Studio is a small development studio that works on cool projects.">
 </head>
